--- a/.github/workflows/Static.yml
+++ b/.github/workflows/Static.yml
@@ -1,6 +1,6 @@
-name: Integration Tests
-
 on: [push, pull_request]
+
+name: Static Checks
 
 jobs:
   tests:
@@ -9,15 +9,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
         rust: [stable]
         make:
-          - name: Run integration tests # Integration tests
-            task: "npx ts-node tests/integration.ts"
+          - name: Clippy
+            task: "cargo clippy"
+          - name: Unit tests # Run unit tests
+            task: "cargo unit-test"
         include:
           - os: ubuntu-latest
             sccache-path: /home/runner/.cache/sccache
-
+          - os: macos-latest
+            sccache-path: /Users/runner/Library/Caches/Mozilla.sccache
+        exclude:
+          - os: macos-latest
+            rust: stable
+            make:
+              name: Clippy
     env:
       RUST_BACKTRACE: full
       RUSTC_WRAPPER: sccache
@@ -25,21 +33,10 @@ jobs:
       SCCACHE_CACHE_SIZE: 2G
       SCCACHE_DIR: ${{ matrix.sccache-path }}
       # SCCACHE_RECACHE: 1 # Uncomment this to clear cache, then comment it back out
-
-    # Service containers to run with `container-job`
-    services:
-      # Label used to access the service container
-      secret:
-        # Docker Hub image
-        image: enigmampc/secret-network-sw-dev:v1.2.2-1
-        ports:
-          # Opens tcp port
-          - 5000:5000
-          - 9091:9091
-
     steps:
       - uses: actions/checkout@v2
-      - name: Install sccache
+      - name: Install sccache (ubuntu-latest)
+        if: matrix.os == 'ubuntu-latest'
         env:
           LINK: https://github.com/mozilla/sccache/releases/download
           SCCACHE_VERSION: v0.2.15
@@ -50,15 +47,21 @@ jobs:
           mv -f $SCCACHE_FILE/sccache $HOME/.local/bin/sccache
           chmod +x $HOME/.local/bin/sccache
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-      - name: Install dependencies
-        run: npm --prefix tests/ install # Install dependencies
+      - name: Install sccache (macos-latest)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew update
+          brew install sccache
       - uses: ./.github/actions/install-rust
         with:
           toolchain: ${{ matrix.rust }}
       - name: Add wasm toolchain
         run: |
           rustup target add wasm32-unknown-unknown
-
+      - name: Install Clippy
+        if: matrix.make.name == 'Clippy'
+        run: |
+          rustup component add clippy
       - name: Cache cargo registry
         uses: actions/cache@v2
         continue-on-error: false
@@ -79,8 +82,6 @@ jobs:
             ${{ runner.os }}-sccache-
       - name: Start sccache server
         run: sccache --start-server
-      - name: Compile code
-        run: make build
       - name: ${{ matrix.make.name }}
         run: ${{ matrix.make.task }}
       - name: Print sccache stats
